# Controlled_Synthetic_Example

./: .gitignore
docs/: Arch_example_GT_case1.drawio  Arch_example_GT_case2.drawio
docs/generated_artifacts/study_case1/component/: AgeSubscriber.puml  CircleArea.puml  CircleGenerator.puml  PerimeterNode.puml  SquareArea.puml  SquareGenerator.puml
docs/generated_artifacts/study_case2/system/: circle_convertor.puml  module.puml  to_circle_part.puml
docs/ground_truth/case_study1/component/: AgeSubscriber_GT.puml  CircleArea_GT.puml  PerimeterNode_GT.puml  SquareArea_GT.puml
docs/ground_truth/case_study2/component/: CircleGenerator_GT.puml  SquareGenerator_GT.puml
docs/ground_truth/case_study2/system/: circle_convetor_GT.puml  module_GT.puml  to_circle_part_GT.puml
src/skeleton/: CMakeLists.txt  package.xml
src/skeleton/launch/: circle_convertor.launch.py  module.launch.xml  to_circle_part.launch.xml
src/skeleton/msg/: Age.msg  Square.msg
src/skeleton/scripts/: age_subscriber.py
src/skeleton/src/: circle_area.cpp  circle_generator.cpp  perimeter_node.cpp  square_area.cpp  square_generator.cpp
src/skeleton/srv/: TwoNumbers.srv
